# BaumEvolutionAlgorithms

./: .gitignore  LICENSE.txt  README.md  __init__.py  baum_eva.py  penalty_methods.py  pyproject.toml  setup.py  support_functions.py
baumeva/: __init__.py  binary_ga.py  categorical_ga.py  collector_ga.py  combinatory_ga.py  ffga.py  global_generator.py  validation.py  vega.py  visualize.py  сombinatory_ga.py
baumeva/ga/: __init__.py  ga_data.py  gen_alg.py  multi_ga_data.py  multi_new_generation.py  new_generation.py
baumeva/ga/crossovers/: __init__.py  base_crossover.py  one_point_crossover.py  order_crossover.py  two_point_crossover.py  uniform_crossover.py
baumeva/ga/fitness/: __init__.py  base_fitness.py  ffga_fitness.py  hyperbola_fitness.py  multi_fitness.py  multi_hyperbola_fitness.py  vega_hyperbola_fitness.py
baumeva/ga/mutations/: __init__.py  base_combinatory_mutation.py  base_mutation.py  bin_string_mutation.py  categorical_mutation.py  inversion_mutation.py  movement_mutation.py  shift_mutation.py  swap_mutation.py
baumeva/ga/penalties/: __init__.py  adaptive_penalty.py  base_penalty.py  dynamic_penalty.py  penalty_methods.py  static_penalty.py
baumeva/ga/populations/: __init__.py  base_population.py  binary_gray_population.py  binary_population.py  cat_population.py  order_cat_population.py
penalties/: penalty_methods.py
tests/: advance_mode_test.py  binary_advance_mode_test.py  binary_ga_test.py  categorical_ga_test.py  collector_ga_test.py  combinator_advance_mode_test.py
tests/multiple_objective/: multi_binary_ga_test.py
(+10 files in other folders)
